# booth-notifier

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: build.yml
.sqlx/: query-052dec3430b48d4459041434ded790a366b2e9b9a6ec4cea8253cde2af49c1c0.json  query-0605abb77ec148ae191da10faa7c94474b1094f3c0d8402ff7fab01fb59cd4de.json  query-0621e24d9ad92c8ae6b10313b30a00fc9c3eea92295ab2bb1f2bfc799afbbb79.json  query-0e29c741e9c0f67c3c0c748fdb492c0f72d1fe9360b1b9f85d0ddf355e99a52e.json  query-142282138e7dfba22b4f71ea621d6a30b197923c938f0d2956b1e46f25e4b763.json  query-2dbb0a21568a12ac64fa29b8e82d104815a81fcc67bedf5a362e11e166080d2e.json  query-3902e61569fe35e14e5fe1051fc7c52a1373dd8398a8bab80105fd52fe414687.json  query-64a54cdc939fc9ad15335fce79b2a25c5749fbc8ca804eb5ebdb772f63d7c709.json  query-698ea782bc00b82fa68717f1ff055f69aabf1552bf2337be5bd2b9c7d1f8b45e.json  query-8f02e7d61f21033a0881b7ec42b7ec97db29e0aaae074273e8e30f59dcfd5a50.json  query-95386d94bf96907188fe767b1b9d4c58c9400d76c5ba1baa459b25ea98304d16.json  query-97ec15af131d9c5f6c9577dbfa0ab217988abd83cda87c9ba2542b2fe3ec1796.json  query-a771e6978d2ce1dc312d93ff90b9c944de7a39c7c6cbc79a284c7da4d232e243.json  query-a7f6026445fc2780852fe5e66a03f4ec1a5a4c0f63974c05732eff834a648172.json  query-a8190d5cc78efd3f9ea1cb1dce68cf903fc92fba69b7787045731684ed94079b.json  query-b39bb550974b6783fd47cbe2a07cbfd90e3656fa8051e93e4a9a5654c669fd0c.json  query-b8f6b834ac450f296104e095545cb6e2d4fcb05b4f6db9ae6c751e07d16b23cf.json  query-c6d8622c6cf68f60311380d48856eaa23bbff41374d8d13118b9cffbafc33727.json  query-f8a0fb76ef1e41d284e59b017934e5a362fe95055c3e380b4b369690c9ac4efe.json  query-fb5574dabbe2b76e65259817f3e8b73ebedbdcedefe45d71045e7c77aaea25db.json
migrations/: 20251015055008_init.sql  20251015150726_special_channels.sql  20260522000000_filter_guild_scope.sql
src/: event_handler.rs  main.rs  web.rs
src/booth/: item.rs
src/commands/: avatar.rs  mod.rs  notification.rs  (+1 more)
(+8 files in other folders)
