[package]
name = "booth-notifier"
version = "1.0.9"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
poise = "0.6.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "cookies", "json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "chrono", "time"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
